# ceres_vendor

./: 0001-fix-windows-suitesparse-finding-error.patch  CMakeLists.txt  README.md  package.xml
cmake/: ceres-vendor-extras.cmake.in
